--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&family=Noto+Serif+KR:wght@300;400;500&display=swap');
 /* font-family: 'Noto Sans KR', sans-serif;
 font-family: 'Noto Serif KR', serif; */
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&display=swap');
+
 html,
 body,
 h1,
